# structix-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  release.yml
docs/: analyzer-manual.md
samples/tetris-demo/: .gitignore  README.md
samples/tetris-demo/backend/TetrisDemo.Api/: Program.cs  TetrisDemo.Api.csproj  appsettings.json
samples/tetris-demo/frontend/: package-lock.json  package.json  tsconfig.json
samples/tetris-demo/frontend/src/: main.ts
site/: analyzer.html  index.html  structix.html  styles.css
site/docs/: analyzer-manual.html  structix-manual.html
site/examples/: analyzer-pr-comment.txt  tetris-analyzer-pr-comment.txt  tetris-analyzer-report.html  tetris-structix-report.html
vAnthropic/: Cargo.toml  README.md
vAnthropic/src/: cli.rs  git_reader.rs  html_report.rs  lib.rs  main.rs
vAnthropic/src/differ/: entity_diff.rs  mod.rs
vAnthropic/src/duplicates/: fingerprint.rs  hasher.rs  mod.rs  normalizer.rs
vAnthropic/src/explainer/: dedup_advisor.rs  mod.rs  narrator.rs
vAnthropic/src/manifest/: mod.rs  schema.rs
vAnthropic/src/parser/: csharp.rs  mod.rs  types.rs  typescript.rs
vAnthropic/tests/: differ.rs  duplicates.rs  parser_csharp.rs  parser_types.rs  parser_typescript.rs  path_filter.rs
vOpenAI/: Cargo.toml  README.md
vOpenAI/crates/analyzer-cli/: Cargo.toml
vOpenAI/crates/analyzer-cli/src/: lib.rs  main.rs
vOpenAI/crates/analyzer-core/: Cargo.toml
vOpenAI/scripts/: run-cargo-gnu.cmd
(+62 files in other folders)
