[package]
name = "structix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "structix"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-c-sharp = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
sha2 = "0.10"
anyhow = "1"

[dev-dependencies]
pretty_assertions = "1"
